--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2046,10 +2046,16 @@ tour-item-template {
     background: var(--color-surfaces);
     z-index: 9;
     gap: 8px;
-    min-width: max-content;
     position: relative;
     width: 100%;
     overflow-y: auto;
+
+    .options_wrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      overflow-y: auto;
+    }
 
     .option {
       display: flex;
