--- a/src/app/public-topics/components/topics/topics.component.html
+++ b/src/app/public-topics/components/topics/topics.component.html
@@ -302,17 +302,19 @@
           translate="COMPONENTS.PUBLIC_TOPICS.BTN_APPLY"></button>
       </div>
       <div class="options button_options" *ngIf="mobileFilters.category">
-        <label class="checkbox" (click)=" mobileFilters.category = 'all'">
-          <span translate="TXT_TOPIC_CATEGORY_ALL"></span>
-          <input type="radio" name="category">
-          <span class="checkmark"></span>
-        </label>
+        <div class="options_wrapper">
+          <label class="checkbox" (click)=" mobileFilters.category = 'all'">
+            <span translate="TXT_TOPIC_CATEGORY_ALL"></span>
+            <input type="radio" name="category">
+            <span class="checkmark"></span>
+          </label>
 
-        <label class="checkbox" *ngFor="let category of categories$" (click)=" mobileFilters.category = category">
-          <span [translate]="'TXT_TOPIC_CATEGORY_'+category | uppercase"></span>
-          <input type="radio" name="category">
-          <span class="checkmark"></span>
-        </label>
+          <label class="checkbox" *ngFor="let category of categories$" (click)=" mobileFilters.category = category">
+            <span [translate]="'TXT_TOPIC_CATEGORY_'+category | uppercase"></span>
+            <input type="radio" name="category">
+            <span class="checkmark"></span>
+          </label>
+        </div>
 
         <button class="btn_medium_secondary"
           (click)="setCategory(mobileFilters.category);mobileFilters.category= false;"
@@ -321,59 +323,43 @@
       <div class="options button_options" *ngIf="mobileFilters.country">
         <typeahead class="dropdown dropdown_input" activeClass="dropdown_active" [term]="countrySearch"
           (search)="searchCountry($event)" [placeholder]="'COMPONENTS.PUBLIC_TOPICS.FILTER_COUNTRY' | translate">
-          <!--ng-container *ngIf="countries$ | async as countries">
-            <div class="options" [ngClass]="{'active': !countries.length}">
-              <ng-container *ngIf="countries$ | async as listCountry">
-                <div class="option" (click)="setCountry('');" translate="TXT_TOPIC_STATUS_ALL"></div>
-                <div class="option" [typeaheadItem]="country.name" *ngFor="let country of listCountry" (click)="setCountry(country.name)">
-                  <div class="item_text_wrap">{{country.name}}</div>
-                </div>
-              </ng-container>
-            </div>
-          </ng-container-->
         </typeahead>
 
-        <label class="checkbox" (click)="mobileFilters.country = 'all'">
-          <span translate="TXT_TOPIC_STATUS_ALL"></span>
-          <input type="radio" name="country">
-          <span class="checkmark"></span>
-        </label>
-        <ng-container *ngIf="countries$ | async as countries">
-          <label class="checkbox" *ngFor="let country of countries" (click)="mobileFilters.country = country.name">
-            <span>{{country.name}}</span>
+        <div class="options_wrapper">
+          <label class="checkbox" (click)="mobileFilters.country = 'all'">
+            <span translate="TXT_TOPIC_STATUS_ALL"></span>
             <input type="radio" name="country">
             <span class="checkmark"></span>
           </label>
-        </ng-container>
+          <ng-container *ngIf="countries$ | async as countries">
+            <label class="checkbox" *ngFor="let country of countries" (click)="mobileFilters.country = country.name">
+              <span>{{country.name}}</span>
+              <input type="radio" name="country">
+              <span class="checkmark"></span>
+            </label>
+          </ng-container>
+        </div>
         <button class="btn_medium_secondary" (click)="setCountry(mobileFilters.country);mobileFilters.country= false;"
           translate="COMPONENTS.PUBLIC_TOPICS.BTN_APPLY"></button>
       </div>
       <div class="options button_options" *ngIf="mobileFilters.language">
         <typeahead class="dropdown dropdown_input" activeClass="dropdown_active" [term]="languageSearch"
           (search)="searchLanguage($event)" [placeholder]="'COMPONENTS.PUBLIC_TOPICS.FILTER_LANGUAGE' | translate">
-          <!--ng-container *ngIf="countries$ | async as countries">
-            <div class="options" [ngClass]="{'active': !countries.length}">
-              <ng-container *ngIf="countries$ | async as listCountry">
-                <div class="option" (click)="setCountry('');" translate="TXT_TOPIC_STATUS_ALL"></div>
-                <div class="option" [typeaheadItem]="country.name" *ngFor="let country of listCountry" (click)="setCountry(country.name)">
-                  <div class="item_text_wrap">{{country.name}}</div>
-                </div>
-              </ng-container>
-            </div>
-          </ng-container-->
         </typeahead>
-        <label class="checkbox" (click)="mobileFilters.language = 'all'">
-          <span translate="TXT_TOPIC_STATUS_ALL"></span>
-          <input type="radio" name="language">
-          <span class="checkmark"></span>
-        </label>
-        <ng-container *ngIf="languages$ | async as languages">
-          <label class="checkbox" *ngFor="let language of languages" (click)="mobileFilters.language = language.name;">
-            <span>{{language.name}}</span>
+        <div class="options_wrapper">
+          <label class="checkbox" (click)="mobileFilters.language = 'all'">
+            <span translate="TXT_TOPIC_STATUS_ALL"></span>
             <input type="radio" name="language">
             <span class="checkmark"></span>
           </label>
-        </ng-container>
+          <ng-container *ngIf="languages$ | async as languages">
+            <label class="checkbox" *ngFor="let language of languages" (click)="mobileFilters.language = language.name;">
+              <span>{{language.name}}</span>
+              <input type="radio" name="language">
+              <span class="checkmark"></span>
+            </label>
+          </ng-container>
+        </div>
         <button class="btn_medium_secondary"
           (click)="setLanguage(mobileFilters.language);mobileFilters.language= false;"
           translate="COMPONENTS.PUBLIC_TOPICS.BTN_APPLY"></button>
