update icon for mobile and tablet

--- a/src/app/shared/components/tour/tour.component.html
+++ b/src/app/shared/components/tour/tour.component.html
@@ -431,10 +431,10 @@
   </div>
   <div class="description">
     <span class="icon">
-      <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" clip-rule="evenodd"
-          d="M9.76315 5.57295L7.9998 2L6.23644 5.57295L2.29346 6.1459L5.14663 8.92705L4.47308 12.8541L7.9998 11L11.5265 12.8541L10.853 8.92705L13.7061 6.1459L9.76315 5.57295ZM10.8409 7.07688L8.87773 6.79163L7.9998 5.01274L7.12186 6.79163L5.15874 7.07688L6.57927 8.46156L6.24393 10.4167L7.9998 9.49363L9.75567 10.4167L9.42032 8.46156L10.8409 7.07688Z"
-          fill="white" />
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none">
+        <path
+          d="M12.4961 16.1318L12 15.8482L11.5039 16.1318L6 19.2768L6 6C6 5.44772 6.44772 5 7 5H17C17.5523 5 18 5.44772 18 6V19.2768L12.4961 16.1318Z"
+          stroke="white" stroke-width="2" />
       </svg>
     </span>
     <span class="bold" translate="COMPONENTS.TOUR.TOPIC_MOBILE_STEP_2_LBL_FAVOURITE"></span><span
@@ -537,10 +537,10 @@
   </!--div-->
   <div class="description">
     <span class="icon">
-      <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" clip-rule="evenodd"
-          d="M9.76315 5.57295L7.9998 2L6.23644 5.57295L2.29346 6.1459L5.14663 8.92705L4.47308 12.8541L7.9998 11L11.5265 12.8541L10.853 8.92705L13.7061 6.1459L9.76315 5.57295ZM10.8409 7.07688L8.87773 6.79163L7.9998 5.01274L7.12186 6.79163L5.15874 7.07688L6.57927 8.46156L6.24393 10.4167L7.9998 9.49363L9.75567 10.4167L9.42032 8.46156L10.8409 7.07688Z"
-          fill="white" />
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none">
+        <path
+          d="M12.4961 16.1318L12 15.8482L11.5039 16.1318L6 19.2768L6 6C6 5.44772 6.44772 5 7 5H17C17.5523 5 18 5.44772 18 6V19.2768L12.4961 16.1318Z"
+          stroke="white" stroke-width="2" />
       </svg>
     </span>
     <span translate="COMPONENTS.TOUR.TOPIC_TABLET_STEP_2_LBL_FAVOURITE"></span><span
