--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2028,6 +2028,10 @@ tour-item-template {
     visibility: visible;
   }
 
+  .btn_medium_close {
+    margin-left: auto;
+  }
+
   .options {
     display: flex;
     flex-direction: column;
